# pvoc-mini-plugins

./: Cargo.toml  README.md
examples/: pvoc_with_cpal.rs
src/: amp_delay.rs  bin_flipper.rs  centroid.rs  domain_xover.rs  exp_avg.rs  formant_shifter.rs  freq_shifter.rs  gate.rs  lib.rs  modular_amp.rs  pitch_shifter.rs  repeater.rs  scrambler.rs  slope_filter.rs  stencil.rs  through.rs  time_blur.rs
