[package]
name = "pvoc-mini-plugins"
version = "0.1.0"
authors = ["Hideaki Tai <hideaki.tai@gmail.com>"]
edition = "2021"
description = "Port of pvoc-plugins that can be available without LADSPA"
readme = "README.md"
repository = "https://github.com/hideakitai/pvoc-mini-plugin"
license = "GPL-3.0"
keywords = ["audio", "fft", "dsp", "fourier", "cpal"]

[dependencies]
pvoc = "0.1"

[dev-dependencies]
cpal = "0.13"
ringbuf = "0.2"
anyhow = "1.0.12"
clap = { version = "3.0", features = ["derive"] }
